Added new pages

--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Github</title>
+		<link rel="stylesheet" type="text/css" href="Style/reset.css">
+		<link rel="stylesheet" type="text/css" href="Style/style.css">
 	</head>
 	<body>
-		<h1>Testing</h1>
+		<header>
+			<a class="main-logo" href="index.html">
+				<img src="images/logo.svg" alt="logo" >
+			</a>
+			<nav class="nav-bar">
+				<ul>
+					<li>
+						<a href="index.html"><span class="active">მთავარი</span></a>
+					</li>
+					<li>
+						<a href="news.html">სიახლეები</a>
+					</li>
+					<li>
+						<a href="contact.html">კონტაქტი</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<img class="Banner" src="images/Banner.jpg" alt="banner">
+		<section>
+				<h3 class="title-h3">Featured | view all featured media</h3>
+				<div class="boxes">
+					<div class="box">
+						<h4 class="title-h4">Responsive Web Design</h4>
+						<div class="main-wrapper">
+							<img class="wrapper-image" src="images/hand-logo.svg" alt="hand-sign">
+							<p class="wrapper-text">approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.</p>
+						</div>
+					</div>
+					<div class="box">
+						<h4 class="title-h4">App Development</h4>
+						<div class="main-wrapper">
+							<img class="wrapper-image" src="images/mobile.svg" alt="mobile">
+							<p class="wrapper-text">Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system.</p>
+						</div>
+					</div>		
+				</div>
+		</section>
+		<section>
+			<img class="logo" src="images/fg.svg" alt="fb">
+			<img class="logo" src="images/you.svg" alt="youtube">
+		</section>
 	</body>
 </html>
